finally a working fix to correct divider spacing

--- a/src/app/components/app/app.scss
+++ b/src/app/components/app/app.scss
@@ -90,6 +90,8 @@ li.test-item:last-child {
     li.section-divider {
         padding-top: 0;
         padding-bottom: 0;
+        z-index: -1;
+        margin-top: -10px;
     }
 
     li:not(.section-divider):hover {
